Updates to latest MO 11.1-SNAPSHOT